fix history text being cut off

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
   background: #141414;
   width: 300px;
   margin: 0 auto;
-  /* padding: 10px; */
   border: 10px solid #141414;
   border-radius: 10px;
   /* disable text selection */
@@ -65,16 +64,12 @@ body {
 .historyDisplay {
   position: absolute;
   right: 30px;
-
   height: 100px;
-  font-size: 25px;
+  font-size: 24.8px;
   color: rgb(170, 255, 86);
-
   white-space: nowrap;
-
   font-family: "Roboto Mono", monospace;
   letter-spacing: 0.06rem;
-  /* display: inline-block; */
 }
 
 .currentDisplay {
@@ -90,7 +85,6 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1px;
-  /* background: #141414; */
 }
 
 .key {
